force-app/main/default/objects/HmK_Order__c/HmK_Order__c.object-meta.xml
<CustomObject>
    <label>HmK_Order</label>
    <nameField>
        <label>Order ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HmK_Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>