force-app/main/default/objects/HmK_Order__c/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <label>Country/Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>