force-app/main/default/objects/HmK_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>HmK_Customer__c</referenceTo>
    <relationshipLabel>HmK_Orders</relationshipLabel>
    <relationshipName>HmK_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>