force-app/main/default/objects/HmK_Order__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <externalId>true</externalId>
    <label>Order ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>