force-app/main/default/objects/HmK_Order__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <referenceTo>HmK_Manager__c</referenceTo>
    <relationshipLabel>HmK_Orders</relationshipLabel>
    <relationshipName>HmK_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>