force-app/main/default/objects/HmK_Order__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return</label>
    <type>Checkbox</type>
</CustomField>